[package]
name = "fx-durable-ga-example-simple-regression"
version = "0.1.0"
edition = "2024"

[features]
default = ["ndarray"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]

[dependencies]
tokio = { version = "1.42.0", features = [
    "macros",
    "full",
    "tracing",
] }
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["train"], default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing = "0.1.41"
anyhow = "1.0.95"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0.134"

[[bin]]
name = "fx-example-regression"
path = "src/main.rs"
